# type-verification-service

./: Dockerfile  LICENSE  README.md  pyproject.toml
conf/: settings.toml
src/: main.py
tests/: test_main.py
