[tool.poetry]
name = "type-verification-service"
version = "0.1.3"
description = ""
authors = ["Eko Indarto <eko.indarto@dans.knaw.nl>"]
readme = "README.md"
include = ["resources/*", "logs/*", "conf/*"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
dynaconf = "^3.1.11"
fastapi = "^0.88.0"
puremagic = "^1.15"
python-multipart = "^0.0.6"
urllib3 = "^1.26.15"
httpx = "^0.24.0"
pytest = "^7.3.1"
python-magic = "^0.4.27"
filetype = "^1.2.0"
fleep = "^1.0.1"
pyfsig = "^0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
